# Correlated-Photon-Mapping-for-Interactive-Global-Illumination-of-Time-Varying-Volumetric-Data

./: README.md
modules/: meta.cmake
modules/importancesamplingcl/: CMakeLists.txt  depends.cmake  importancesamplingclmodule.cpp  importancesamplingclmodule.h  importancesamplingclmoduledefine.h  importanceuniformgrid3d.h  minmaxuniformgrid3dimportancecl.cpp  minmaxuniformgrid3dimportancecl.h  uniformsamplegenerator2dcl.cpp  uniformsamplegenerator2dcl.h
modules/importancesamplingcl/cl/: lightsourcesampler.cl  minmaxuniformgrid3dimportance.cl  samplegridindex.cl  uniformsamplegenerator2d.cl
modules/importancesamplingcl/cl/datastructures/: ray.cl
modules/importancesamplingcl/cl/intersection/: lightsamplemeshintersection.cl
modules/importancesamplingcl/cl/light/: light.cl  lightsampling.cl
modules/importancesamplingcl/processors/: minmaxuniformgrid3dimportanceclprocessor.cpp  minmaxuniformgrid3dimportanceclprocessor.h  uniformsamplegenerator2dprocessorcl.cpp  uniformsamplegenerator2dprocessorcl.h
modules/lightcl/: CMakeLists.txt  LICENSE.txt  convexhull2d.cpp  convexhull2d.h  depends.cmake  directionallightsamplercl.cpp  directionallightsamplercl.h  lightclmodule.cpp  lightclmodule.h  lightclmoduledefine.h  lightsample.cpp  lightsample.h  lightsamplemeshintersectioncl.cpp  lightsamplemeshintersectioncl.h  lightsourcesamplercl.cpp  lightsourcesamplercl.h  lightsourcescl.cpp  lightsourcescl.h  orientedboundingbox2d.cpp  orientedboundingbox2d.h  pointplaneprojection.cpp  pointplaneprojection.h  sample.h  samplegenerator2dcl.cpp  samplegenerator2dcl.h
modules/lightcl/cl/: directionallightsampler.cl
modules/lightcl/cl/datastructures/: lightsample.cl
modules/lightcl/cl/intersection/: lightsamplemeshintersection.cl
modules/lightcl/processors/: directionallightsamplerclprocessor.cpp  directionallightsamplerclprocessor.h  samplestoimageprocessor.cpp  samplestoimageprocessor.h
modules/progressivephotonmapping/: CMakeLists.txt  depends.cmake  photondata.cpp  photondata.h  photonrecomputationdetector.cpp  photonrecomputationdetector.h  photontracercl.cpp  photontracercl.h  progressivephotonmappingmodule.cpp  progressivephotonmappingmodule.h  progressivephotonmappingmoduledefine.h
modules/progressivephotonmapping/cl/: densityestimationkernel.cl  hashlightsample.cl  indextobuffer.cl  photon.cl  photonrecomputationdetector.cl  photonstolightvolume.cl  photontracer.cl  threshold.cl  transmittance.cl
modules/progressivephotonmapping/processor/: photontolightvolumeprocessorcl.cpp  photontolightvolumeprocessorcl.h  progressivephotontracercl.cpp  progressivephotontracercl.h
modules/radixsortcl/: CMakeLists.txt  README  depends.cmake  radixsortclmodule.cpp  radixsortclmodule.h  radixsortclmoduledefine.h
modules/radixsortcl/clogs/: clogs.h  platform.h  radixsort.h  scan.h  visibility.h
modules/radixsortcl/ext/clogs/: CMakeLists.txt  Changelog  LICENSE  clogs.h  core.h  radixsort.h  reduce.h  scan.h  tune.h
modules/radixsortcl/ext/clogs/kernels/: reduce.cl
modules/radixsortcl/ext/clogs/src/: cache.cpp  cache.h  cache_types.cpp  clhpp11.h  core.cpp  parameters.cpp  reduce.cpp  scan.cpp  sqlite3.h  tr1_functional.h  tr1_random.h  tune.cpp  utils.cpp  utils.h
modules/radixsortcl/kernels/: radixsort.cl  reduce.cl  scan.cl
modules/radixsortcl/processors/: radixsortcl.cpp  radixsortcl.h
modules/radixsortcl/src/: cache.cpp  cache_types.cpp  cache_types.h  clhpp11.h  parameters.h  radixsort.cpp  radixsort.h  reduce.cpp  reduce.h  scan.cpp  scan.h  tr1_functional.h  tr1_random.h  tune.cpp  tune.h  utils.cpp  utils.h
modules/rndgenmwc64x/: CMakeLists.txt  README.txt  depends.cmake  mwc64xrandomnumbergenerator.cpp  mwc64xrandomnumbergenerator.h  mwc64xseedgenerator.cpp  mwc64xseedgenerator.h  rndgenmwc64xmodule.cpp  rndgenmwc64xmodule.h  rndgenmwc64xmoduledefine.h
modules/rndgenmwc64x/cl/: random.cl  randomnumbergenerator.cl  randstategen.cl  skip_mwc.cl
modules/rndgenmwc64x/processors/: randomnumbergenerator2dcl.cpp  randomnumbergenerator2dcl.h  randomnumbergeneratorcl.cpp  randomnumbergeneratorcl.h
modules/uniformgridcl/: CMakeLists.txt  LICENSE.txt  buffermixercl.cpp  buffermixercl.h  depends.cmake  minmaxuniformgrid3d.h  uniformgrid3d.cpp  uniformgrid3d.h  uniformgrid3dreader.cpp  uniformgrid3dreader.h  uniformgrid3dwriter.cpp  uniformgrid3dwriter.h  uniformgridclmodule.cpp  uniformgridclmodule.h  uniformgridclmoduledefine.h
modules/uniformgridcl/cl/: buffermixer.cl
modules/uniformgridcl/cl/uniformgrid/: uniformgrid.cl  volumeminmax.cl
modules/uniformgridcl/glsl/: volume_mix.frag
modules/uniformgridcl/processors/: dynamicvolumedifferenceanalysis.cpp  dynamicvolumedifferenceanalysis.h  uniformgrid3dexport.cpp  uniformgrid3dexport.h  uniformgrid3dplayerprocessor.cpp  uniformgrid3dplayerprocessor.h  uniformgrid3dsequenceselector.cpp  uniformgrid3dsequenceselector.h  uniformgrid3dsourceprocessor.cpp  uniformgrid3dsourceprocessor.h  uniformgrid3dvectorsource.cpp  uniformgrid3dvectorsource.h  volumeminmaxclprocessor.cpp  volumeminmaxclprocessor.h  volumesequenceplayer.cpp  volumesequenceplayer.h
workspaces/: CorrelatedPhotonMappingSingleVolume.inv
